Add asynchronous DNS support to OpenSSH
Initial async-DNS support for outgoing channels using getaddrinfo_a()

--- a/configure.ac
+++ b/configure.ac
@@ -1741,6 +1741,9 @@ AC_CHECK_FUNCS([ \
 	waitpid \
 ])
 
+AC_SEARCH_LIBS([getaddrinfo_a], [anl])
+AC_CHECK_FUNCS([getaddrinfo_a])
+
 AC_LINK_IFELSE(
         [AC_LANG_PROGRAM(
            [[ #include <ctype.h> ]],
